# ugv_bicycle_assignment

./: LICENSE  README.md
ugv_assign_description/: CMakeLists.txt  package.xml
ugv_assign_description/launch/: description.launch
ugv_assign_description/meshes/: Back_Body.stl  Body.stl  Camera_Stereo.stl  Camera_Support.stl  Front_Suspension.stl  Handlebars.stl  Middle_Suspension.stl  Mini_Wheels.stl  Mini_Wheels_Body.stl  Wheel.stl
ugv_assign_description/rviz/: bicycle_robot.rviz
ugv_assign_description/urdf/: bicycle_robot.urdf
ugv_assign_gazebo/: CMakeLists.txt  package.xml
ugv_assign_gazebo/config/: ctrl_ackermann_steering_controller.yaml  ctrl_joint_state_publisher.yaml  gazebo.rviz
ugv_assign_gazebo/launch/: gazebo.launch  gazebo_desert.launch  gazebo_desert_sand.launch  gazebo_empty.launch  gazebo_empty_sand.launch  gazebo_empty_sand_rqt.launch
ugv_assign_gazebo/models/desert_flat/: model.config  model.sdf
ugv_assign_gazebo/scripts/: ackermann_publisher.py  ackermann_translate.py
ugv_assign_gazebo/worlds/: desert_flat.world  desert_flat_sand.world  empty_world.world
