<?xml version="1.0"?>
<package format="2">
    <name>ugv_assign_gazebo</name>
    <version>0.0.0</version>
    <description>The bicycle_robot package</description>
    <maintainer email="jeanps95@gmail.com">Jean Paulo</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>xacro</exec_depend>
</package>